--- a/.github/workflows/terraform-validation.yaml
+++ b/.github/workflows/terraform-validation.yaml
@@ -7,6 +7,11 @@ on:
         required: false
         default: 1.5.4
         description: The Terraform Version Used for the Github action.
+      only-destroy:
+        type: boolean
+        required: false
+        default: false
+        description: Condition to only activate the destroy job manually.
 
   pull_request:
 
@@ -15,15 +20,19 @@ env:
   TF_INPUT: false
 
 jobs:
-  terraform-plan:
-    name: Terraform Plan for all examples
+  tf-plan:
+    if: ! inputs.only-destroy
+    name: TF Plan
     runs-on: ubuntu-latest
     permissions:
       id-token: write
       contents: read
     strategy:
       matrix:
+        ##* Update the list to update examples test.
         examples: ["simple", "bootstrap-routing"]
+    outputs:
+      exitCode: ${{ steps.plan.outputs.exitcode }}
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -48,4 +57,76 @@ jobs:
         run: |
           terraform init
           terraform validate
-          terraform plan -detailed-exitcode
+          terraform plan -out ${{ matrix.examples }}.tfplan -detailed-exitcode
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: "${{ matrix.examples }}.tfplan"
+          path: "${{ github.workspace }}/examples/${{ matrix.examples }}/${{ matrix.examples }}.tfplan"
+
+  tf-apply:
+    if: ( !cancelled() && !failure() && needs.tf-plan.outputs.exitCode == 2 && ! inputs.only-destroy )
+    name: TF Apply
+    runs-on: ubuntu-latest
+    needs: tf-plan
+    strategy:
+      matrix:
+        ##* Update the list to update examples test
+        examples: ["simple", "bootstrap-routing"]
+    ## ? https://docs.github.com/en/actions/using-jobs/defining-outputs-for-jobs#overview
+    outputs:
+      exitCode: ${{ steps.apply.outputs.ExitCode }}
+    steps:
+      - name: checkout the repository
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ inputs.terraform-version }}
+
+      - uses: actions/download-artifact@v3
+        with:
+          name: "${{ matrix.examples }}.tfplan"
+          path: "${{ github.workspace }}/examples/${{ matrix.examples }}"
+
+      - name: "Terraform Apply"
+        shell: bash
+        id: apply
+        working-directory: "${{ github.workspace }}/examples/${{ matrix.examples }}"
+        run: |
+          terraform init
+          terraform apply "${{ matrix.examples }}.tfplan"
+          EXIT_CODE=$?
+
+          echo "ExitCode=$EXIT_CODE" >> $GITHUB_OUTPUT
+
+  tf-destroy:
+    if: ( !cancelled() && !failure() && needs.tf-apply.outputs.exitCode == 0 ) || inputs.only-destroy
+    name: TF Destroy
+    runs-on: ubuntu-latest
+    needs: tf-plan
+    strategy:
+      matrix:
+        ##* Update the list to update examples test
+        examples: ["simple", "bootstrap-routing"]
+    ## ? https://docs.github.com/en/actions/using-jobs/defining-outputs-for-jobs#overview
+    outputs:
+      exitCode: ${{ steps.apply.outputs.ExitCode }}
+    steps:
+      - name: checkout the repository
+        uses: actions/checkout@v3
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: ${{ inputs.terraform-version }}
+
+      - name: "Terraform Destroy"
+        shell: bash
+        id: destroy
+        working-directory: "${{ github.workspace }}/examples/${{ matrix.examples }}"
+        run: |
+          terraform init
+          terraform destroy -auto-approve
