--- a/.github/workflows/terraform-validation.yaml
+++ b/.github/workflows/terraform-validation.yaml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   tfplan:
-    if: !inputs.only-destroy
+    if: ! inputs.only-destroy
     name: TF Plan
     runs-on: ubuntu-latest
     permissions:
@@ -69,7 +69,7 @@ jobs:
           path: "${{ github.workspace }}/examples/${{ matrix.examples }}/${{ matrix.examples }}.tfplan"
 
   tfapply:
-    if: ( !cancelled() && !failure() && needs.tf-plan.outputs.exitCode == 2 && ! inputs.only-destroy )
+    if: ( !cancelled() && !failure() && needs.tfplan.outputs.exitCode == 2 && ! inputs.only-destroy )
     name: TF Apply
     runs-on: ubuntu-latest
     needs: tfplan
@@ -106,7 +106,7 @@ jobs:
           echo "ExitCode=$EXIT_CODE" >> $GITHUB_OUTPUT
 
   tfdestroy:
-    if: ( !cancelled() && !failure() && needs.tf-apply.outputs.exitCode == 0 ) || inputs.only-destroy
+    if: ( !cancelled() && !failure() && needs.tfapply.outputs.exitCode == 0 ) || inputs.only-destroy
     name: TF Destroy
     runs-on: ubuntu-latest
     needs: [tfplan, tfapply]
@@ -114,9 +114,6 @@ jobs:
       matrix:
         ##* Update the list to update examples test
         examples: ["simple", "bootstrap-routing"]
-    ## ? https://docs.github.com/en/actions/using-jobs/defining-outputs-for-jobs#overview
-    outputs:
-      exitCode: ${{ steps.apply.outputs.ExitCode }}
     steps:
       - name: checkout the repository
         uses: actions/checkout@v3
