--- a/.github/workflows/terraform-validation.yaml
+++ b/.github/workflows/terraform-validation.yaml
@@ -22,7 +22,7 @@ env:
 
 jobs:
   tfplan:
-    if: ! inputs.only-destroy
+    if: '! ${{ inputs.only-destroy }}'
     name: TF Plan
     runs-on: ubuntu-latest
     permissions:
@@ -69,7 +69,7 @@ jobs:
           path: "${{ github.workspace }}/examples/${{ matrix.examples }}/${{ matrix.examples }}.tfplan"
 
   tfapply:
-    if: ( !cancelled() && !failure() && needs.tfplan.outputs.exitCode == 2 && ! inputs.only-destroy )
+    if: '( !cancelled() && !failure() && needs.tfplan.outputs.exitCode == 2 && ! ${{ inputs.only-destroy }} )'
     name: TF Apply
     runs-on: ubuntu-latest
     needs: tfplan
@@ -106,7 +106,7 @@ jobs:
           echo "ExitCode=$EXIT_CODE" >> $GITHUB_OUTPUT
 
   tfdestroy:
-    if: ( !cancelled() && !failure() && needs.tfapply.outputs.exitCode == 0 ) || inputs.only-destroy
+    if: ${{ ( !cancelled() && !failure() && needs.tfapply.outputs.exitCode == 0 ) || inputs.only-destroy }}
     name: TF Destroy
     runs-on: ubuntu-latest
     needs: [tfplan, tfapply]
