--- a/.github/workflows/terraform-validation.yaml
+++ b/.github/workflows/terraform-validation.yaml
@@ -1,6 +1,6 @@
 name: Validation with Terraform
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
       terraform-version:
         type: string
@@ -37,21 +37,10 @@ jobs:
       exitCode: ${{ steps.plan.outputs.exitcode }}
 
     steps:
-      - name: checkout
-        uses: actions/checkout@v3
-
-      - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v3
+      - name: Checkout, Authorize and Set up Terraform
+        uses: ./.github/workflows/template-terraform.yaml
         with:
-          aws-region: ${{ vars.AWS_REGION }}
-          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
-          mask-aws-account-id: true
-          unset-current-credentials: true
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
-        with:
-          terraform_version: ${{ inputs.terraform-version }}
+          terraform-version: ${{ inputs.terraform-version }}
 
       - name: Terraform init and plan
         shell: bash
@@ -81,13 +70,10 @@ jobs:
     outputs:
       exitCode: ${{ steps.apply.outputs.ExitCode }}
     steps:
-      - name: checkout the repository
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Checkout, Authorize and Set up Terraform
+        uses: ./.github/workflows/template-terraform.yaml
         with:
-          terraform_version: ${{ inputs.terraform-version }}
+          terraform-version: ${{ inputs.terraform-version }}
 
       - uses: actions/download-artifact@v3
         with:
@@ -115,13 +101,10 @@ jobs:
         ##* Update the list to update examples test
         examples: ["simple", "bootstrap-routing"]
     steps:
-      - name: checkout the repository
-        uses: actions/checkout@v3
-
-      - name: Set up Terraform
-        uses: hashicorp/setup-terraform@v2
+      - name: Checkout, Authorize and Set up Terraform
+        uses: ./.github/workflows/template-terraform.yaml
         with:
-          terraform_version: ${{ inputs.terraform-version }}
+          terraform-version: ${{ inputs.terraform-version }}
 
       - name: "Terraform Destroy"
         shell: bash
