only have terratests

--- a/.github/workflows/terraform-terratest-validation.yaml
+++ b/.github/workflows/terraform-terratest-validation.yaml
@@ -11,6 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v3
+        with:
+          aws-region: ${{ vars.AWS_REGION }}
+          role-to-assume: ${{ vars.AWS_ROLE_ARN }}
+          mask-aws-account-id: true
+          unset-current-credentials: true
+
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
