--- a/.github/workflows/terraform-terratest-validation.yaml
+++ b/.github/workflows/terraform-terratest-validation.yaml
@@ -6,7 +6,9 @@ on:
 
 jobs:
   teratest:
-
+    permissions:
+      id-token: write
+      contents: read
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
