--- a/.github/workflows/terraform-terratest-validation.yaml
+++ b/.github/workflows/terraform-terratest-validation.yaml
@@ -27,10 +27,7 @@ jobs:
           go-version: '1.21.x'
           cache: false
 
-      - name: Install dependencies
-        run: go get .
-        working-directory: "${{ github.workspace }}/tests"
 
-      - name: Test
-        run: go test -v
+      - name: Testing all examples
+        run: go test -v -timeout=30m
         working-directory: "${{ github.workspace }}/tests"
