--- a/.github/workflows/terraform-terratest-validation.yaml
+++ b/.github/workflows/terraform-terratest-validation.yaml
@@ -5,13 +5,14 @@ on:
   pull_request:
 
 jobs:
-  teratest:
+  terratest:
     permissions:
+      ## required for configure aws credentials
       id-token: write
       contents: read
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
@@ -26,7 +27,6 @@ jobs:
         with:
           go-version: '1.21.x'
           cache: false
-
 
       - name: Testing all examples
         run: go test -v -timeout=30m
