--- a/.github/workflows/validate-pull-request.yaml
+++ b/.github/workflows/validate-pull-request.yaml
@@ -9,6 +9,9 @@ on:
       - unlabeled
       - reopened
 
+concurrency:
+  group: validate
+
 jobs:
   validate:
     runs-on: ubuntu-latest
@@ -20,7 +23,7 @@ jobs:
           labels: "breaking-change,enhancement,bug,chore,documentation"
 
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: terraform formatt
         uses: dflook/terraform-fmt-check@v1
