--- a/.github/workflows/terraform-terratest-validation.yaml
+++ b/.github/workflows/terraform-terratest-validation.yaml
@@ -3,6 +3,11 @@ name: Terraform validation with terratest
 on:
   workflow_dispatch:
   pull_request:
+    paths:
+      - './*.tf'
+      - 'examples/**/*.tf'
+      - '.github/workflows/terraform-terratest-validation.yaml'
+      - 'tests/*.go'
 
 concurrency:
   group: terratest
